# nemog

./: CLAUDE.md  CONSTITUTION.md  main.py  pyproject.toml  tessl.json
.codex/skills/: tessl:modern-python
.tessl/tiles/tessl/pypi-langgraph/: tile.json
.tessl/tiles/tessl/pypi-langgraph-cli/: tile.json
.tessl/tiles/tessl/pypi-langgraph-cli/docs/: cli-commands.md  configuration.md  docker-integration.md  index.md  templates.md
.tessl/tiles/tessl/pypi-langgraph/docs/: channels.md  errors.md  functional-api.md  graph-construction.md  graph-execution.md  index.md  interrupts.md  messages.md  pregel.md  retry-caching.md  runtime-context.md  state-management.md  types-constants.md
.tessl/tiles/tessl/pypi-pytest/: tile.json
.tessl/tiles/tessl/pypi-pytest/docs/: assertions.md  configuration.md  fixtures.md  index.md  marks.md  reporting.md  test-collection.md  test-utilities.md  testing-functions.md  warnings.md
.tessl/tiles/trailofbits/skills/: README.md  tile.json
.tessl/tiles/trailofbits/skills/plugins/gh-cli/skills/using-gh-cli/: SKILL.md
.tessl/tiles/trailofbits/skills/plugins/git-cleanup/skills/git-cleanup/: SKILL.md
.tessl/tiles/trailofbits/skills/plugins/yara-authoring/: README.md
config/: config.yml  prompts.yml
specs/001-langgraph-scaffolding/: analysis.md  context.json  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-langgraph-scaffolding/checklists/: requirements-quality.md  requirements.md
specs/001-langgraph-scaffolding/tests/: test-specs.md
src/app/: main.py  stubs.py
src/graphs/: state.py  writer_graph.py
src/services/: writer_svc.py
tests/contract/: test_writer_svc.py
tests/integration/: test_branching.py  test_hello_world.py
tests/unit/: test_empty_input.py  test_state.py
(+11 files in other folders)
